# deckr-controller

./: .gitignore  AGENTS.md  README.md  pyproject.toml  uv.toml.example
.github/workflows/: unit-tests.yml
src/deckr/controller/: __init__.py  __main__.py  _binding_validator.py  _command_router.py  _config_document.py  _controller_service.py  _device_layout.py  _device_manager.py  _driver_service.py  _event_translator.py  _hardware_service.py  _navigation_service.py  _persistence.py  _providers.py  _remote_hardware.py  _remote_hardware_service.py  _render.py  _render_dispatcher.py  _runtime_service.py  _runtime_support.py  _service.py  _state_store.py  _title_defaults.py
src/deckr/controller/config/: __init__.py  _data.py  _reader.py  _service.py
src/deckr/controller/invariant/: executor.py
src/deckr/controller/invariant/ops/: __init__.py  encode_jpeg.py  fetch_url.py
src/deckr/controller/invariant/recipes/: __init__.py  _icon_button.py  _image.py  _overlays.py  _title.py
src/deckr/controller/mqtt/: __init__.py
src/deckr/controller/plugin/: action_registry.py  context.py  events.py  provider.py
src/deckr/controller/plugin/builtin/: __init__.py  _context.py  _goto.py  _nav_home.py
src/deckr/controller/settings/: __init__.py  _service.py
tests/: conftest.py  test_binding_validator.py  test_command_router.py  test_config_document.py  test_config_service.py  test_controller_persistence.py  test_device_layout.py  test_device_manager_integration.py  test_driver_service.py  test_event_translator.py  test_handle_command.py  test_hardware_endpoint_routing.py  test_invariant_recipes.py  test_navigation_service.py  test_plugin_host_loading.py  test_plugin_service.py  test_remote_hardware.py  test_render.py  test_render_dispatcher.py  test_runtime_service.py  test_service_config_wiring.py  test_service_main.py  test_settings_service.py
